--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "cors": "^2.8.5"
+    "cors": "^2.8.5",
+    "@modelcontextprotocol/sdk": "^1.0.0",
+    "axios": "^1.6.2"
   },
   "devDependencies": {
     "@types/node": "^20.0.0",
