--- a/package.json
+++ b/package.json
@@ -4,20 +4,20 @@
   "type": "module",
   "scripts": {
     "build": "tsc",
-    "start": "node dist/server.js",
-    "dev": "tsx src/server.ts"
+    "start": "node dist/index.js",
+    "dev": "tsx src/index.ts"
   },
   "dependencies": {
-    "express": "^4.18.2",
-    "cors": "^2.8.5",
     "@modelcontextprotocol/sdk": "^1.0.0",
-    "axios": "^1.6.2"
+    "axios": "^1.6.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2"
   },
   "devDependencies": {
-    "@types/node": "^20.0.0",
+    "@types/cors": "^2.8.19",
     "@types/express": "^4.17.21",
-    "@types/cors": "^2.8.17",
-    "typescript": "^5.3.3",
-    "tsx": "^4.7.0"
+    "@types/node": "^20.0.0",
+    "tsx": "^4.7.0",
+    "typescript": "^5.3.3"
   }
 }
