--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@modelcontextprotocol/sdk": "^1.0.0",
     "axios": "^1.6.2",
     "cors": "^2.8.5",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^20.0.0",
+    "@types/pg": "^8.15.5",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3"
   }
